# AISE

./: README.md  SKILLS_SPEC.md  design.md  pyproject.toml
.github/workflows/: ci.yml
src/aise/: __init__.py  config.py  main.py
src/aise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/aise/agents/: __init__.py  architect.py  architect_agent.md  developer.py  developer_agent.md  product_manager.py  product_manager_agent.md  qa_engineer.py  qa_engineer_agent.md  team_lead.py  team_lead_agent.md  team_manager.py
src/aise/core/: __init__.py  agent.py  artifact.py  llm.py  message.py  orchestrator.py  session.py  skill.py  workflow.py
src/aise/github/: client.py  permissions.py
src/aise/skills/: __init__.py
src/aise/skills/architect/: __init__.py  api_design.py  architecture_review.py  system_design.py  tech_stack_selection.py
src/aise/skills/developer/: __init__.py  bug_fix.py  code_generation.py  code_review.py  unit_test_writing.py
src/aise/skills/github/: pr_merge.py
src/aise/skills/lead/: __init__.py  conflict_resolution.py  progress_tracking.py  task_assignment.py  (+1 more)
src/aise/whatsapp/: __init__.py  bridge.py  client.py  session.py  webhook.py
tests/test_agents/: test_architect.py  test_developer.py  test_product_manager.py  test_qa_engineer.py  test_team_lead.py  test_team_manager.py
tests/test_core/: test_agent.py  test_artifact.py  test_message.py  test_model_config.py  test_orchestrator.py  test_session.py  test_workflow.py
tests/test_whatsapp/: test_bridge.py  test_client.py  test_group.py  test_session.py  test_webhook.py
(+15 files in other folders)
