[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aise"
version = "0.1.0"
description = "Multi-Agent Software Development Team"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
aise = "aise.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
